# obsidian-plugin-sync

./: .gitignore  LICENSE  NOTICE  README.md  obsidian-plugin-sync.py  pyproject.toml  setup.py
